tests/fail/ip4.rs
use net_macros::ip4;

fn main() {
    let a = ip4!("192.168.11");
}
