tests/fail/ip4.stderr
error: invalid IPv4 address syntax
 --> tests/fail/ip4.rs:4:18
  |
4 |     let a = ip4!("192.168.11");
  |                  ^^^^^^^^^^^^
